--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
                 <p class="line">A curated space for designers to explore styles, refine ideas, and create with confidence. Transform ideas into stuning</p>
                 
                 <p class="line2">ANOTH</p>
-                <div class="head3"></div>
+                <div class="head3">
+                    <button class="button1">UNQUE PERSPECTIVE</button>
+                    <button class="button2">ANOTHER WAY TO SEE DESIGN</button>
+                </div>
                 <div class="head4">
                     <p class="lin1">Explore a diverse range of references-from timeless</p>
                     <p class="lin3">Transform ideas into stunning designs with thougthfully selected inspirations</p>
